[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
anchor-lang= { version = "0.30.1", features=["init-if0-needed"] }
anchor-spl = "0.30.1"
solana-program="=2.0.3

